# FaceObjRecognitionForCCSpace

./: .gitignore  LICENSE.txt  README.md  facerecdb.py  facesrec.txt  facetool.py  setup.cfg
facerec/detection/: __init__.py  info.py  rf.py
facerec/detection/layers/functions/: prior_box.py
facerec/detection/models/: retinaface.py
facerec/facetool/: __init__.py  __main__.py  tool.py
facerec/filters/: __init__.py  abstract.py  opencv.py
facerec/io/: __init__.py  abstract.py  ffmpeg.py  opencv.py  pyav.py  util.py
facerec/recognition/: __init__.py
facerec/tracking/: __init__.py  filter.py
facerec/tracking/deep_sort/: deep_sort.py
facerec/tracking/deep_sort/sort/: kalman_filter.py
media/index/: labels.json
