[metadata]
name = facetools
version = 0.0.1
author = Kevin McGuinness Anderson Simiscuka
description = Face analysis software
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    plac
    numpy
    torch
    av
    opencv-python
    tqdm
    torchvision
    facenet_pytorch
    scipy

[options.entry_points]
console_scripts = 
    facetool = facerec.facetool:main